[project]
name = "heretic-llm"
version = "1.2.0"
description = "Fully automatic censorship removal for language models"
readme = "README.md"
license = "AGPL-3.0-or-later"
authors = [
    { name = "Philipp Emanuel Weidmann", email = "pew@worldwidemann.com" },
    { name = "Aatif Qmr" },
]
requires-python = ">=3.10"
keywords = ["llm", "transformer", "abliteration", "censorship-removal", "directional-ablation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: GPU",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "accelerate~=1.10",
    "bitsandbytes~=0.45",
    "datasets~=4.0",
    "hf-transfer~=0.1",
    "huggingface-hub~=0.34",
    "kernels~=0.11",
    "optuna~=4.5",
    "peft~=0.14",
    "psutil~=7.1",
    "pydantic-settings~=2.10",
    "questionary~=2.1",
    "rich~=14.1",
    "transformers~=4.57",
]

[project.optional-dependencies]
research = [
    "geom-median~=0.1",
    "imageio~=2.37",
    "matplotlib~=3.10",
    "numpy~=2.2",
    "pacmap~=0.8",
    "scikit-learn~=1.7",
]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.5",
    "ty>=0.0.5",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.urls]
Homepage = "https://github.com/Aatif-qmr/Uncensored-AI"
Documentation = "https://github.com/Aatif-qmr/Uncensored-AI#readme"
Repository = "https://github.com/Aatif-qmr/Uncensored-AI.git"
Issues = "https://github.com/Aatif-qmr/Uncensored-AI/issues"
Changelog = "https://github.com/Aatif-qmr/Uncensored-AI/releases"

[project.scripts]
heretic = "heretic.main:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "heretic"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
